fixed step 3 alignment

--- a/bizi/src/App.css
+++ b/bizi/src/App.css
@@ -618,7 +618,6 @@ nav.dark #myAccount a{
   margin: 0 auto;
   width: 60vw;
   column-gap: 4.5vw;
-  border-style: solid;
 }
 
 .prefCol {
